# EstateSearchSystem

./: README.md  pyproject.toml
doc/: athome.rst  homes.rst  suumo.rst  yahoo.rst
src/estate_search_system/: __init__.py  suumo.py  yahoo.py
