[project]
name = "estate_search_system"
version = "0.1.0"
description = "不動産情報を集約して検索する"
dependencies = [
    "pip>=24.2",
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.3",
    "retry>=0.9.2",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.8.0",
    "flake8>=7.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/estate_search_system"]

[tool.black]
line-length = 79
target-version = ['py311']